--- a/Dockerfile.gpu
+++ b/Dockerfile.gpu
@@ -40,12 +40,6 @@ ENV JUPYTER_PORT 8888
 ENV CONDA_DIR $HOME/.$PYTHON3_VERSION/
 
 ##############################################################################
-# Repositories
-##############################################################################
-ENV repconda="https://repo.continuum.io/miniconda/${PYTHON3_VERSION}-Linux-x86_64.sh"
-ENV repdvc="https://dvc.org/deb/dvc.list"
-
-##############################################################################
 # Install base dependencies
 ##############################################################################
 RUN apt-get update \
@@ -74,7 +68,7 @@ RUN apt-get update \
 ##############################################################################
 # Install Miniconda dependencies
 ##############################################################################
-    wget --quiet "${repconda}" \
+    wget --quiet https://repo.continuum.io/miniconda/${PYTHON3_VERSION}-Linux-x86_64.sh \
     && /bin/bash ${PYTHON3_VERSION}-latest-Linux-x86_64.sh -b -p ${CONDA_DIR} \
     && rm ${PYTHON3_VERSION}-Linux-x86_64.sh \
     && conda config --add channels defaults \
