--- a/Dockerfile.gpu
+++ b/Dockerfile.gpu
@@ -63,12 +63,12 @@ RUN apt-get update \
     && mkdir -p $HOME/workdir/notebooks \
     && mkdir -p /.config/supervisord \
     && chmod +x /start.sh \
-    && chmod +x /usr/local/bin/start-notebook.sh \
-    && \
+    && chmod +x /usr/local/bin/start-notebook.sh
+    
 ##############################################################################
 # Install Miniconda dependencies
 ##############################################################################
-    wget --quiet https://repo.continuum.io/miniconda/${PYTHON3_VERSION}-Linux-x86_64.sh \
+RUN wget --quiet https://repo.continuum.io/miniconda/${PYTHON3_VERSION}-Linux-x86_64.sh \
     && /bin/bash ${PYTHON3_VERSION}-latest-Linux-x86_64.sh -b -p ${CONDA_DIR} \
     && rm ${PYTHON3_VERSION}-Linux-x86_64.sh \
     && conda config --add channels defaults \
