--- a/Dockerfile.gpu
+++ b/Dockerfile.gpu
@@ -34,8 +34,8 @@ ENV NVIDIA_DRIVER_CAPABILITIES compute,utility
 ENV NVIDIA_REQUIRE_CUDA "cuda>=10.0 brand=tesla,driver>=384,driver<385"
 ENV CUDA_PATH /usr/local/cuda/bin
 ENV CUDNN_VERSION 7.3.1.20
-ENV PYTHON3_VERSION miniconda3-latest
-ENV PYTHON2_VERSION miniconda2-latest
+ENV PYTHON3_VERSION Miniconda3-latest
+ENV PYTHON2_VERSION Miniconda2-latest
 ENV JUPYTER_TYPE notebook
 ENV JUPYTER_PORT 8888
 ENV CONDA_DIR $HOME/.$PYTHON3_VERSION/
@@ -69,7 +69,7 @@ RUN apt-get update \
 ##############################################################################
 # Install Miniconda dependencies
 ##############################################################################
-RUN wget --quiet https://repo.continuum.io/miniconda/${PYTHON3_VERSION}-Linux-x86_64.sh \
+RUN wget --quiet https://repo.anaconda.com/miniconda/${PYTHON3_VERSION}-Linux-x86_64.sh \
     && /bin/bash ${PYTHON3_VERSION}-latest-Linux-x86_64.sh -b -p ${CONDA_DIR} \
     && rm ${PYTHON3_VERSION}-Linux-x86_64.sh \
     && conda config --add channels defaults \
