--- a/Dockerfile.gpu
+++ b/Dockerfile.gpu
@@ -72,14 +72,14 @@ RUN apt-get update \
     wget --quiet https://repo.anaconda.com/miniconda/${PYTHON3_VERSION}-Linux-x86_64.sh \
     && /bin/bash ${PYTHON3_VERSION}-Linux-x86_64.sh -b -p ${CONDA_DIR} \
     && rm ${PYTHON3_VERSION}-Linux-x86_64.sh \
+    && /bin/bash -c "exec $SHELL -l" \
+    && /bin/bash -c "source $HOME/.bashrc" \
     && conda config --add channels defaults \
     && conda config --add channels conda-forge \
     && conda config --add channels bioconda \
     && conda config --add channels anaconda \
     && pip install scif \
-    && conda update --all && conda clean -tipsy \
-    && /bin/bash -c "exec $SHELL -l" \
-    && /bin/bash -c "source $HOME/.bashrc"
+    && conda update --all && conda clean -tipsy
     
 ##############################################################################
 # Install packages through Scif
