--- a/Dockerfile.gpu
+++ b/Dockerfile.gpu
@@ -75,7 +75,7 @@ RUN apt-get update \
     && /bin/bash -c "exec $SHELL -l" \
     && /bin/bash -c "source $HOME/.bashrc" \
     && ~/.conda/bin/conda config --add channels defaults \
-    && ~/.conda/bin/conda --add channels conda-forge \
+    && ~/.conda/bin/conda config --add channels conda-forge \
     && ~/.conda/bin/conda config --add channels bioconda \
     && ~/.conda/bin/conda config --add channels anaconda \
     && pip install scif \
