--- a/Dockerfile.cpu
+++ b/Dockerfile.cpu
@@ -4,7 +4,7 @@ MAINTAINER Fabiano Menegidio <fabiano.menegidio@biology.bio.br>
 ##############################################################################
 # Metadata
 ##############################################################################
-LABEL base.image="bioAI:cpu"
+LABEL base.image="bioAI:gpu"
 LABEL version="1"
 LABEL description=""
 LABEL website=""
@@ -31,7 +31,8 @@ ENV PYTHON3_VERSION Miniconda3-latest
 ENV PYTHON2_VERSION Miniconda2-latest
 ENV JUPYTER_TYPE notebook
 ENV JUPYTER_PORT 8888
-ENV CONDA_DIR $HOME/.$PYTHON3_VERSION/
+ENV CONDA_DIR $HOME/.conda
+ENV PATH $CONDA_DIR:$CONDA_DIR/bin:$SCIENV_ROOT/envs:$PYENV:$PATH
 
 ##############################################################################
 # Install base dependencies
@@ -63,16 +64,15 @@ RUN apt-get update \
 # Install Miniconda dependencies
 ##############################################################################
     wget --quiet https://repo.anaconda.com/miniconda/${PYTHON3_VERSION}-Linux-x86_64.sh \
-    && /bin/bash ${PYTHON3_VERSION}-latest-Linux-x86_64.sh -b -p ${CONDA_DIR} \
+    && /bin/bash ${PYTHON3_VERSION}-Linux-x86_64.sh -b -p ${CONDA_DIR} \
     && rm ${PYTHON3_VERSION}-Linux-x86_64.sh \
-    && conda config --add channels defaults \
-    && conda config --add channels conda-forge \
-    && conda config --add channels bioconda \
-    && conda config --add channels anaconda \
-    && pip install scif \
-    && conda update --all && conda clean -tipsy \
     && /bin/bash -c "exec $SHELL -l" \
-    && /bin/bash -c "source $HOME/.bashrc"
+    && /bin/bash -c "source $HOME/.bashrc" \
+    && ~/.conda/bin/conda config --add channels conda-forge \
+    && ~/.conda/bin/conda config --add channels bioconda \
+    && ~/.conda/bin/conda config --add channels anaconda \
+    && pip install scif \
+    && ~/.conda/bin/conda update --all && ~/.conda/bin/conda clean -tipsy
     
 ##############################################################################
 # Install packages through Scif
