--- a/Dockerfile.gpu
+++ b/Dockerfile.gpu
@@ -90,7 +90,9 @@ RUN apt-get update \
     scif install $HOME/.packages/dvc.scif \
     && scif install $HOME/.packages/cuda.scif \
     && scif install $HOME/.packages/cdnn.scif \
-    && scif install $HOME/.packages/jupyter.scif
+    && scif install $HOME/.packages/jupyter.scif \
+    && scif install $HOME/.packages/python.scif \
+    && scif install $HOME/.packages/pythonML.scif
 
     
 EXPOSE 6000
