--- a/Dockerfile.gpu
+++ b/Dockerfile.gpu
@@ -124,7 +124,8 @@ RUN apt-get update \
     && scif install $HOME/.packages/mxnet.scif \
     && scif install $HOME/.packages/onnx.scif \
     && scif install $HOME/.packages/dm-sonnet-gpu.scif \
-    && scif install $HOME/.packages/caffe.scif
+    && scif install $HOME/.packages/caffe.scif \
+    && scif install $HOME/.packages/itorch.scif
     
 
     
