--- a/Dockerfile.gpu
+++ b/Dockerfile.gpu
@@ -43,6 +43,7 @@ ADD packages/dm-sonnet-gpu.scif /root/.packages/
 ADD packages/caffe.scif /root/.packages/
 ADD packages/itorch.scif /root/.packages/
 ADD packages/mlflow.scif /root/.packages/
+ADD packages/mlvtools.scif /root/.packages/
 
 
 ##############################################################################
@@ -127,7 +128,8 @@ RUN apt-get update \
     && scif install $HOME/.packages/dm-sonnet-gpu.scif \
     && scif install $HOME/.packages/caffe.scif \
     && scif install $HOME/.packages/itorch.scif \
-    && scif install $HOME/.packages/mlflow.scif
+    && scif install $HOME/.packages/mlflow.scif \
+     && scif install $HOME/.packages/mlvtools.scif
     
 EXPOSE 6000
 EXPOSE 8888
