--- a/Dockerfile.gpu
+++ b/Dockerfile.gpu
@@ -44,6 +44,7 @@ ADD packages/caffe.scif /root/.packages/
 ADD packages/itorch.scif /root/.packages/
 ADD packages/mlflow.scif /root/.packages/
 ADD packages/mlvtools.scif /root/.packages/
+ADD packages/scikitbio.scif /root/.packages/
 
 
 ##############################################################################
@@ -129,7 +130,8 @@ RUN apt-get update \
     && scif install $HOME/.packages/caffe.scif \
     && scif install $HOME/.packages/itorch.scif \
     && scif install $HOME/.packages/mlflow.scif \
-    && scif install $HOME/.packages/mlvtools.scif
+    && scif install $HOME/.packages/mlvtools.scif \
+    && scif install $HOME/.packages/scikitbio.scif
     
 EXPOSE 6000
 EXPOSE 8888
