--- a/Dockerfile.gpu
+++ b/Dockerfile.gpu
@@ -45,6 +45,8 @@ ADD packages/itorch.scif /root/.packages/
 ADD packages/mlflow.scif /root/.packages/
 ADD packages/mlvtools.scif /root/.packages/
 ADD packages/scikitbio.scif /root/.packages/
+ADD packages/biopython.scif /root/.packages/
+
 
 
 ##############################################################################
@@ -131,7 +133,8 @@ RUN apt-get update \
     && scif install $HOME/.packages/itorch.scif \
     && scif install $HOME/.packages/mlflow.scif \
     && scif install $HOME/.packages/mlvtools.scif \
-    && scif install $HOME/.packages/scikitbio.scif
+    && scif install $HOME/.packages/scikitbio.scif \
+    && scif install $HOME/.packages/biopython.scif
     
 EXPOSE 6000
 EXPOSE 8888
