--- a/Dockerfile.gpu
+++ b/Dockerfile.gpu
@@ -47,6 +47,7 @@ ADD packages/mlvtools.scif /root/.packages/
 ADD packages/scikit.scif /root/.packages/
 ADD packages/scikitbio.scif /root/.packages/
 ADD packages/biopython.scif /root/.packages/
+ADD packages/dask.scif /root/.packages/
 
 
 
@@ -121,10 +122,22 @@ RUN apt-get update \
     && scif install $HOME/.packages/pythonML.scif \
     && scif install $HOME/.packages/tensorflow-gpu.scif \
     && scif install $HOME/.packages/keras-gpu.scif \
+    && scif install $HOME/.packages/lasagne.scif \
+    && scif install $HOME/.packages/darknet.scif \
+    && scif install $HOME/.packages/pytorch-gpu.scif \
+    && scif install $HOME/.packages/theano.scif \
+    && scif install $HOME/.packages/opencv.scif \
+    && scif install $HOME/.packages/chainer.scif \
+    && scif install $HOME/.packages/mxnet.scif \
+    && scif install $HOME/.packages/onnx.scif \
+    && scif install $HOME/.packages/dm-sonnet-gpu.scif \
+    && scif install $HOME/.packages/caffe.scif \
+    && scif install $HOME/.packages/itorch.scif \
     && scif install $HOME/.packages/mlflow.scif \
     && scif install $HOME/.packages/mlvtools.scif \
     && scif install $HOME/.packages/scikitbio.scif \
     && scif install $HOME/.packages/scikit.scif \
+    && scif install $HOME/.packages/dask.scif \
     && scif install $HOME/.packages/biopython.scif
     
 EXPOSE 6000
