--- a/Dockerfile.gpu
+++ b/Dockerfile.gpu
@@ -51,6 +51,8 @@ ADD packages/dask.scif /root/.packages/
 ADD packages/libsvm.scif /root/.packages/
 ADD packages/supervisord.scif /root/.packages/
 ADD packages/libs.scif /root/.packages/
+ADD packages/ipython.scif /root/.packages/
+
 
 
 ##############################################################################
@@ -213,6 +215,7 @@ RUN apt-get update \
     && scif install $HOME/.packages/scikit.scif \
     && scif install $HOME/.packages/biopython.scif \
     && scif install $HOME/.packages/libs.scif \
+    && scif install $HOME/.packages/ipython.scif \
     && pyenv deactivate
     
 EXPOSE 6000
