--- a/Dockerfile.gpu
+++ b/Dockerfile.gpu
@@ -4,9 +4,10 @@ MAINTAINER Fabiano Menegidio <fabiano.menegidio@biology.bio.br>
 ##############################################################################
 # Metadata
 ##############################################################################
-LABEL base.image="bioAI:gpu"
-LABEL version="1"
-LABEL description=""
+LABEL base.image="ubuntu:18.04"
+LABEL name.image="bioLearning - GPU Flavour"
+LABEL version="1.0"
+LABEL description="An all-in-one Docker image for Machine Learning and Deep Learning."
 LABEL website=""
 LABEL documentation=""
 
@@ -25,10 +26,10 @@ ADD packages/dvc.scif /root/.packages/
 ADD packages/cuda.scif /root/.packages/
 ADD packages/cdnn.scif /root/.packages/
 ADD packages/jupyter.scif /root/.packages/
-ADD packages/python.scif /root/.packages/
-ADD packages/pythonML.scif /root/.packages/
+ADD packages/python-pkg.scif /root/.packages/
+ADD packages/pythonML-pkg.scif /root/.packages/
 ADD packages/tensorflow-gpu.scif /root/.packages/
-ADD packages/keras-gpu.scif /root/.packages/
+ADD packages/keras.scif /root/.packages/
 ADD packages/lasagne.scif /root/.packages/
 ADD packages/darknet.scif /root/.packages/
 ADD packages/pytorch-gpu.scif /root/.packages/
@@ -37,24 +38,42 @@ ADD packages/opencv.scif /root/.packages/
 ADD packages/chainer.scif /root/.packages/
 ADD packages/mxnet.scif /root/.packages/
 ADD packages/onnx.scif /root/.packages/
-ADD packages/dm-sonnet-gpu.scif /root/.packages/
-ADD packages/caffe.scif /root/.packages/
-ADD packages/itorch.scif /root/.packages/
+ADD packages/caffe-gpu.scif /root/.packages/
+ADD packages/caffe2-gpu.scif /root/.packages/
 ADD packages/mlflow.scif /root/.packages/
-ADD packages/mlvtools.scif /root/.packages/
+ADD packages/mlv-tools.scif /root/.packages/
 ADD packages/scikit.scif /root/.packages/
-ADD packages/scikitbio.scif /root/.packages/
 ADD packages/biopython.scif /root/.packages/
 ADD packages/dask.scif /root/.packages/
 ADD packages/libsvm.scif /root/.packages/
-ADD packages/libs.scif /root/.packages/
+ADD packages/graphviz.scif /root/.packages/
 ADD packages/beautifulsoup.scif /root/.packages/
+ADD packages/dm-sonnet-gpu.scif /root/.packages/
+ADD packages/xgboost.scif /root/.packages/
+ADD packages/git-annex.scif /root/.packages/
+ADD packages/torch.scif /root/.packages/
+ADD packages/cupy.scif /root/.packages/
+ADD packages/pydata.scif /root/.packages/
+ADD packages/cntk.scif /root/.packages/
+ADD packages/boost.scif /root/.packages/
+ADD packages/blocks.scif /root/.packages/
+ADD packages/neon.scif /root/.packages/
+ADD packages/gensim.scif /root/.packages/
+ADD packages/statsmodels.scif /root/.packages/
+ADD packages/shogun.scif /root/.packages/
+ADD packages/nupic.scif /root/.packages/
+ADD packages/orange3.scif /root/.packages/
+ADD packages/pymc.scif /root/.packages/
+ADD packages/deap.scif /root/.packages/
+ADD packages/annoy.scif /root/.packages/
 
 
 ##############################################################################
 # ENVs
 ##############################################################################
+ENV conda_env=py36
 ENV DEBIAN_FRONTEND noninteractive
+ENV APT_KEY_DONT_WARN_ON_DANGEROUS_USAGE=DontWarn
 ENV SHELL /bin/bash
 ENV HOME /root
 ENV CUDA_VERSION 10.0.130
@@ -70,7 +89,7 @@ ENV JUPYTER_TYPE notebook
 ENV JUPYTER_PORT 8888
 ENV CONDA_DIR $HOME/.conda
 ENV PATH $CONDA_DIR:$CONDA_DIR/bin:$PATH
-
+ENV XDG_CACHE_HOME $HOME/.cache/
 
 ##############################################################################
 # Install base dependencies
@@ -81,7 +100,7 @@ RUN apt-get update \
     --no-install-recommends bash git zip wget libssl1.0.0 apt-utils \
     ca-certificates locales mlocate debconf curl build-essential \
     curl vim bzip2 sudo automake cmake sed grep x11-utils xvfb openssl \
-    libxtst6 libxcomposite1 $LIBPNG stunnel \
+    libxtst6 libxcomposite1 $LIBPNG stunnel swig libjpeg-dev libpng-dev libreadline-dev \
     && wget https://dvc.org/deb/dvc.list -O /etc/apt/sources.list.d/dvc.list \
     && apt-get update \
     && apt-get clean && apt-get autoclean && apt-get autoremove \
@@ -108,45 +127,53 @@ RUN apt-get update \
     && conda config --add channels conda-forge \
     && conda config --add channels bioconda \
     && conda config --add channels anaconda \
+    && conda update --all && conda clean -tipy \
     && \
+##############################################################################
+# Lasagne and dm-sonnet only work on Python <3.6 or Python <2.7.
+# So we decided to use Python 3.6 as the container default.
+# If you don't want to use these libraries, change your Python version to > 3.6.
+##############################################################################
+    conda create -n py36 python=3.6 -y
+
+ENV CONDA_DEFAULT_ENV $conda_env
+
 ##############################################################################
 # Install Scif
 ##############################################################################
-    pip --no-cache-dir install scif \
-    && conda update --all && conda clean -tipsy \    
+RUN python -m pip --no-cache-dir install --upgrade scif \
+    && conda clean -tipy \
     && \
 ##############################################################################
 # Install packages through Scif
 ##############################################################################
-    scif install $HOME/.packages/dvc.scif \
-    && scif install $HOME/.packages/cuda.scif \
+##############################################################################
+# Essentials
+##############################################################################
+    scif install $HOME/.packages/cuda.scif \
     && scif install $HOME/.packages/cdnn.scif \
-    && scif install $HOME/.packages/jupyter.scif \
-    && scif install $HOME/.packages/python.scif \
-    && scif install $HOME/.packages/pythonML.scif \
-    && scif install $HOME/.packages/tensorflow-gpu.scif \
-    && scif install $HOME/.packages/keras-gpu.scif \
-    && scif install $HOME/.packages/mlflow.scif \
-    && scif install $HOME/.packages/mlvtools.scif \
-    && scif install $HOME/.packages/scikitbio.scif \
-    && scif install $HOME/.packages/scikit.scif \
+    && scif install $HOME/.packages/python-pkg.scif \
     && scif install $HOME/.packages/biopython.scif \
-    && scif install $HOME/.packages/libs.scif \
-    && scif install $HOME/.packages/beautifulsoup.scif \
-    && scif install $HOME/.packages/lasagne.scif \
-    && scif install $HOME/.packages/darknet.scif \
-    && scif install $HOME/.packages/pytorch-gpu.scif \
-    && scif install $HOME/.packages/theano.scif \
-    && scif install $HOME/.packages/opencv.scif \
-    && scif install $HOME/.packages/chainer.scif \
-    && scif install $HOME/.packages/mxnet.scif \
-    && scif install $HOME/.packages/onnx.scif \
-    && scif install $HOME/.packages/dm-sonnet-gpu.scif \
-    && scif install $HOME/.packages/caffe.scif \
-    && scif install $HOME/.packages/itorch.scif \
+    && scif install $HOME/.packages/jupyter.scif \
+    && scif install $HOME/.packages/pythonML-pkg.scif \
+    && scif install $HOME/.packages/dvc.scif \
+    && scif install $HOME/.packages/mlflow.scif \
+    && scif install $HOME/.packages/mlv-tools.scif \
+    && scif install $HOME/.packages/graphviz.scif \
     && scif install $HOME/.packages/dask.scif \
-    && scif install $HOME/.packages/libsvm.scif \
-    && /bin/bash -c "exec $SHELL -l"
+    && scif install $HOME/.packages/git-annex.scif \
+    && scif install $HOME/.packages/cupy.scif \
+    && scif install $HOME/.packages/pydata.scif \
+    && scif install $HOME/.packages/boost.scif \
+    && \
+##############################################################################
+# Nonessential
+##############################################################################
+    scif install $HOME/.packages/tensorflow-gpu.scif \
+    && scif install $HOME/.packages/keras.scif \
+    && scif install $HOME/.packages/scikit.scif \
+    && scif install $HOME/.packages/beautifulsoup.scif \
+    && scif install $HOME/.packages/pytorch-gpu.scif
 
 EXPOSE 6000
 EXPOSE 8888
