--- a/Dockerfile.sklearn
+++ b/Dockerfile.sklearn
@@ -25,6 +25,7 @@ ADD .config/bashrc/.bash_profile $HOME/.bash_profile
 ADD packages/dvc.scif /root/.packages/
 ADD packages/cuda.scif /root/.packages/
 ADD packages/cdnn.scif /root/.packages/
+ADD packages/dask.scif /root/.packages/
 ADD packages/jupyter.scif /root/.packages/
 ADD packages/python-pkg.scif /root/.packages/
 ADD packages/pythonML-pkg.scif /root/.packages/
@@ -117,6 +118,7 @@ RUN python -m pip --no-cache-dir install --upgrade scif \
     && scif install $HOME/.packages/pythonML-pkg.scif \
     && scif install $HOME/.packages/dvc.scif \
     && scif install $HOME/.packages/mlflow.scif \
+    && scif install $HOME/.packages/dask.scif \
     && \
 ##############################################################################
 # Nonessential Install
